--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 ﻿body {
   font-family: "mr-eaves-xl-modern";
-  color: #000;
-  background: #fdfdff;
+  color: #1f1f1f;
+  background: #e0e0e0;
   overflow-y: scroll;
 }
 .cf:after {
@@ -10,57 +10,167 @@
   clear: both;
 }
 /*--------------------------------------------*/
-/*Structure*/
+/*Preload*/
 /*--------------------------------------------*/
-.outer {
-  min-width: 480px;
-}
-.inner {
-  margin: 0 auto;
-  padding: 40px;
-}
-h1 {
-  margin: 0;
-  font-family: "mr-eaves-xl-modern";
-  font-size: 2.25rem;
-  letter-spacing: .05em;
-  line-height: 1em;
+#preload_container {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  background: red;
 }
 /*--------------------------------------------*/
 /*HEADER*/
 /*--------------------------------------------*/
+header {
+  background: #f9f9f9;
+}
 header h1 {
   float: left;
 }
 header nav {
   float: right;
 }
-.nav-social a {
+h1 {
+  margin: 0;
+  font-family: "mr-eaves-xl-modern";
+  font-size: 2.25rem;
+  line-height: 1em;
+}
+/*--------------------------------------------*/
+/*Structure*/
+/*--------------------------------------------*/
+.outer {
+  min-width: 480px;
+}
+.inner {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+.section_header_container {
+  letter-spacing: 1px;
+}
+.section_header_container .section_header_left {
+  float: left;
+  width: 50%;
+}
+.section_header_container .section_header_right {
+  float: right;
+  width: 50%;
+  text-align: right;
+}
+/*--------------------------------------------*/
+/*featured*/
+/*--------------------------------------------*/
+#featured {
+  background: #181818;
+}
+#featured .inner {
+  padding: 40px 40px 0;
+}
+#featured .featured_image {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../img/reach_brochure/preview.jpg');
+  min-height: 540px;
+}
+@media (orientation: portrait) {
+  #featured .featured_image {
+    width: 100%;
+    background-size: cover;
+  }
+}
+@media (orientation: landscape) {
+  #featured .featured_image {
+    height: 80vh;
+    background-size: contain;
+  }
+}
+#featured .featured_link {
+  padding: 0 20px 0 2px;
+  line-height: 1em;
+  display: inline-block;
+  background: #f9f9f9;
   text-decoration: none;
-  color: #000;
 }
-.nav-social a:hover {
-  color: #999;
+#featured .featured_link:hover {
+  color: #f9f9f9;
+  background: #3d484e;
 }
-p {
-  margin: 1em 0 0;
-  font-size: 1.25rem;
+#featured .section_header_container {
+  color: #f9f9f9;
 }
-.keywords {
-  color: #999;
-  font-style: italic;
+/*--------------------------------------------*/
+/*work*/
+/*--------------------------------------------*/
+#work {
+  background: #e0e0e0;
 }
-#code .project {
-  padding: 40px 0;
-  border-top: 1px solid #000;
+#work .inner {
+  padding: 40px 40px 80px;
 }
-#code .project nav {
-  margin: 1em 0 0;
-  font-size: 1.25rem;
+#work_gallery {
+  margin-top: 40px;
+  padding: 0;
+  list-style: none;
 }
-#code .project nav a {
-  color: #999;
+#work_gallery li {
+  display: block;
+  float: left;
+  width: 50%;
+  cursor: zoom-in;
+  margin: 0;
+}
+@media (min-width: 960px) {
+  #work_gallery li {
+    width: 25%;
+  }
+}
+#work_gallery img {
+  display: block;
+  width: 100%;
+}
+#work_gallery img:hover {
+  opacity: 0.5;
+  -webkit-transition: opacity 0.5s ease 0s;
+  -o-transition: opacity 0.15s ease 0s;
+  transition: opacity 0.15s ease 0s;
+}
+/*--------------------------------------------*/
+/*footer*/
+/*--------------------------------------------*/
+footer .inner {
+  border-top: 1px solid #bababa;
+  padding: 0 40px;
+}
+footer .section_header_left {
+  line-height: 80px;
+  letter-spacing: 1px;
+}
+footer .section_header_left .title {
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+  font-size: 1.25em;
+  color: #1f1f1f;
   text-decoration: none;
-  border-bottom: 1px solid #999;
-  margin-right: .2em;
+}
+footer .section_header_left .title:hover {
+  color: #999;
+}
+footer .section_header_right {
+  line-height: 80px;
+}
+footer .nav-social a {
+  display: inline-block;
+  vertical-align: middle;
+  height: 32px;
+  text-decoration: none;
+  color: #1f1f1f;
+}
+footer .nav-social a:hover {
+  color: #999;
+}
+footer .nav-social a i {
+  vertical-align: top;
 }
