--- a/css/main.less
+++ b/css/main.less
@@ -1,17 +1,25 @@
-﻿@min-width:600px;
-@mid-width:800px;
+﻿@min-width:480px;
+@mid-width:960px;
 @max-width:1400px;
 
-@black: #000;
-@gray:#999;
+@black: #1f1f1f;
 
-@white:#fdfdff;
+@dark-gray:#181818;
+@gray:#bababa;
+
+@light-gray:#e0e0e0;
+
+@off-white:#f0f0f0;
+@white:#f9f9f9;
+
+
+
 
 body
 {
 	font-family: "mr-eaves-xl-modern";
 	color:@black;
-	background:@white;
+	background:@light-gray;
 	overflow-y:scroll;
 }
 .cf:after 
@@ -21,38 +29,27 @@ body
   clear: both;
 }
 
-
 /*--------------------------------------------*/
-/*Structure*/
+/*Preload*/
 /*--------------------------------------------*/
 
-.outer
+#preload_container
 {
-	min-width:480px;
+	width:100%;
+	height:100vh;
+	position:fixed;
+	top:0;
+	background:red;
 }
-.inner
-{
-	margin:0 auto;
-	padding:40px;
-}
 
 
-
-
-h1 
-{	
-	margin:0;
-	font-family: "mr-eaves-xl-modern";
-	font-size:2.25rem;
-	letter-spacing:.05em;
-	line-height:1em;
-}
 
 /*--------------------------------------------*/
 /*HEADER*/
 /*--------------------------------------------*/
 header
 {
+	background:@white;
 	h1 
 	{
 		float:left;		
@@ -64,49 +61,202 @@ header
 }
 
 
-.nav-social
+
+h1 
+{	
+	margin:0;
+	font-family: "mr-eaves-xl-modern";
+	font-size:2.25rem;
+	line-height:1em;
+}
+h2
 {
-	a
+}
+
+
+/*--------------------------------------------*/
+/*Structure*/
+/*--------------------------------------------*/
+
+.outer
+{
+	min-width:@min-width;
+}
+.inner
+{
+	max-width:@max-width;
+	margin:0 auto;
+}
+
+.section_header_container
+{
+	letter-spacing:1px;
+	.section_header_left
 	{
-		text-decoration:none;
-		color:@black;
-		&:hover
+		float:left;
+		width:50%;
+	}
+	.section_header_right
+	{
+		float:right;
+		width:50%;
+		text-align:right;
+	}
+}
+
+
+
+
+
+
+/*--------------------------------------------*/
+/*featured*/
+/*--------------------------------------------*/
+#featured
+{	
+	background:#181818;
+	.inner
+	{
+		padding:40px 40px 0;
+	}
+	.featured_image
+	{
+		background-position:center;
+		background-repeat:no-repeat;
+		background-image:url('../img/reach_brochure/preview.jpg');
+		min-height:540px;
+		@media (orientation:portrait)
 		{
-			color:#999;
+			width:100%;
+			background-size:cover;
+		}
+		@media (orientation:landscape)
+		{
+			height:80vh;
+			background-size:contain;
 		}
 	}
-
-}
-
-p
-{
-	margin:1em 0 0;
-	font-size:1.25rem;
-}
-.keywords
-{
-	color:@gray;
-	font-style:italic;
-}
-
-#code
-{
-	.project
-	{	
-		padding:40px 0;
-		border-top:1px solid @black;
-		nav
+	.featured_link
+	{
+		padding:0 20px 0 2px;
+		line-height:1em;
+		display:inline-block;
+		background:@white;
+		text-decoration:none;
+		&:hover
 		{
-			margin:1em 0 0;
-			font-size:1.25rem;
-			a
-			{		
-				color:@gray;
-				text-decoration:none;
-				border-bottom:1px solid @gray;
-				margin-right:.2em;
+			color:@white;
+			background:#3d484e;
+		}
+	}
+	.section_header_container
+	{		
+		color:@white;
+	}
+}
+
+
+/*--------------------------------------------*/
+/*work*/
+/*--------------------------------------------*/
+#work
+{
+	background:@light-gray;
+	.inner
+	{
+		padding:40px 40px 80px;
+	}
+}
+#work_gallery
+{
+	margin-top:40px;
+	padding:0;
+	list-style: none;
+	li
+	{		
+		display:block;
+		float:left;
+		width:50%;
+		cursor:zoom-in;	
+		margin:0;
+		@media (min-width:@mid-width)
+		{
+			width:25%;
+		}
+
+	}
+	img
+	{
+		display:block;
+		width:100%;
+		&:hover
+		{
+			opacity:0.5;
+			-webkit-transition: opacity 0.5s ease 0s;
+			-o-transition: opacity 0.15s ease 0s;
+			transition: opacity 0.15s ease 0s;
+		}
+	}
+}
+
+
+/*--------------------------------------------*/
+/*footer*/
+/*--------------------------------------------*/
+
+footer
+{
+	.inner
+	{
+		border-top:1px solid @gray;
+		padding:0 40px;
+	}
+	.section_header_container
+	{
+		
+	}
+	.section_header_left 
+	{
+		line-height:80px;
+		letter-spacing:1px;
+		.title
+		{
+			display:inline-block;
+			margin:0;
+			vertical-align:middle;
+			font-size:1.25em;
+			color:@black;
+			text-decoration:none;
+			&:hover
+			{
+				color:#999;
+			}
+		}
+	}
+	.section_header_right
+	{
+		line-height:80px;
+	}
+	.nav-social
+	{
+		a
+		{
+			display:inline-block;
+			vertical-align:middle;
+			height:32px;
+			text-decoration:none;
+			color:@black;
+			&:hover
+			{
+				color:#999;
+			}
+			i
+			{
+				vertical-align:top;
 			}
 		}
 	}
 }
+
+
 
