--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   height: 100vh;
   position: fixed;
   top: 0;
-  background: red;
+  background: #f0f0f0;
 }
 /*--------------------------------------------*/
 /*HEADER*/
