--- a/css/main.less
+++ b/css/main.less
@@ -21,6 +21,10 @@ body
 	color:@black;
 	background:@light-gray;
 	overflow-y:scroll;
+	@media (max-width:480px)
+	{
+		zoom:.6;
+	}
 }
 .cf:after 
 {
