--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@
   background: #e0e0e0;
   overflow-y: scroll;
 }
+@media (max-width: 480px) {
+  body {
+    zoom: .6;
+  }
+}
 .cf:after {
   content: "";
   display: table;
