--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,9 @@
 }
 @media (max-width: 480px) {
   body {
-    zoom: .6;
+    font-size: 1.5em;
+    zoom: .65;
   }
-}
-.asd {
-  color: red;
 }
 .cf:after {
   content: "";
