--- a/css/main.less
+++ b/css/main.less
@@ -23,14 +23,9 @@ body
 	overflow-y:scroll;
 	@media (max-width:480px)
 	{
-
-		zoom:.6;
+		font-size:1.5em;
+		zoom:.65;
 	}
-}
-
-.asd
-{
-	color:red;
 }
 .cf:after 
 {
